--- a/googleCloudInstagramCloneWebApplication/frontend/package.json
+++ b/googleCloudInstagramCloneWebApplication/frontend/package.json
@@ -41,6 +41,7 @@
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.44.1",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
     "vitest": "^2.1.3"
